# StateMachine

./: CMakeLists.txt  main.cpp
include/: SharedMemoryResource.h  StateMachine.h  StateMachineManager.h  StateMachineResource.h  ifstream_guard.h  ofstream_guard.h  pthread_lock_guard.h  shm.h
include/client/: Client.h  ClientManager.h  ClientSharedMemoryResource.h
include/server/: Server.h  ServerManager.h  ServerSharedMemoryResource.h
src/: Client.cpp  ClientSharedMemoryResource.cpp  Server.cpp  ServerSharedMemoryResource.cpp
